@@ -26,7 +26,7 @@ Vendor: Oracle Corporation
 Packager: Joel Becker <joel.becker@oracle.com>
 Provides: oracleasm = %{version}
 AutoReqProv: no
-Requires: k_dflt = 2.4.19-%{sver}
+Requires: k_deflt = 2.4.19-%{sver}
 Requires: oracleasm-support >= 0.9.0
 # BuildRequires: kernel-source >= %{kver}  -- silly UL nodeps
 
